// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-k1ws5-View-Surface-getBorders-primary em57xhy0"
+   class="components-surface css-avigp2-View-Surface-getBorders-primary em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderLeft 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-gi9sau-View-Surface-getBorders-primary em57xhy0"
+   class="components-surface css-avigp2-View-Surface-getBorders-primary em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderRight 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-1lwskr8-View-Surface-getBorders-primary em57xhy0"
+   class="components-surface css-avigp2-View-Surface-getBorders-primary em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render borderTop 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-sdy6q1-View-Surface-getBorders-primary em57xhy0"
+   class="components-surface css-avigp2-View-Surface-getBorders-primary em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #000;
  position: relative;
}

<div
  class="components-surface emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="Surface"
>
  Surface
</div>
`;

exports[`props should render variants 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
-   class="components-surface css-jkj9zl-View-Surface-getBorders-secondary em57xhy0"
+   class="components-surface css-avigp2-View-Surface-getBorders-primary em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
`;
